[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for cap-std"
edition = "2021"
rust-version = "1.58.0"
license = "MIT OR Apache-2.0"
name = "cap-std-ext"
readme = "README.md"
repository = "https://github.com/coreos/cap-std-ext"
version = "2.0.0"

[dependencies]
cap-tempfile = "1.0.1"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = ">= 0.36, <= 0.37", features = ["fs", "procfs", "process"] }

[dev-dependencies]
anyhow = "1.0"
