[package]
authors = ["Colin Walters <walters@verbum.org>"]
description = "Extension APIs for cap-std"
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR Apache-2.0"
name = "cap-std-ext"
readme = "README.md"
repository = "https://github.com/coreos/cap-std-ext"
# For historical reasons, the major version number is one greater than the cap-std major.
version = "3.0.0"

[dependencies]
cap-tempfile = "2"
cap-primitives = "2"

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38", features = ["fs", "procfs", "process", "pipe"] }

[dev-dependencies]
anyhow = "1.0"
